Updated after case study

--- a/src/analysis/case_study/case_study.ipynb
+++ b/src/analysis/case_study/case_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
        " 'engine',\n",
        " 'fender_front_rh',\n",
        " 'front_panel',\n",
+       " 'grille',\n",
        " 'headlamp_rh',\n",
        " 'non_external',\n",
        " 'misc',\n",
@@ -38,30 +39,30 @@
        " 'rear_panel',\n",
        " 'rear_quarter_rh',\n",
        " 'tail_lamp_rh',\n",
+       " 'windscreen_rear',\n",
        " 'door_front_lh',\n",
        " 'door_rear_lh',\n",
        " 'rear_quarter_lh',\n",
        " 'tail_lamp_lh',\n",
        " 'fender_front_lh',\n",
-       " 'headlamp_lh',\n",
-       " 'grille']"
+       " 'headlamp_lh']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predDf = pd.read_csv(\n",
-    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_4/case_study_pred.csv\"\n",
+    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_8/case_study_pred.csv\"\n",
     ")\n",
     "gtDf = pd.read_csv(\n",
-    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_4/case_study_gt.csv\"\n",
+    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_8/case_study_gt.csv\"\n",
     ")\n",
-    "visionPredDf1 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/saloon_new_labels_pos_weight/Saloon - 4 Dr_imgs_pred_output.csv\")\n",
-    "visionPredDf2 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/hatchback_new_labels_pos_weight/Hatchback - 5 Dr_imgs_pred_output.csv\")\n",
-    "visionPredDf3 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/suv_new_labels_pos_weight/SUV - 5 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf1 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/116/Saloon - 4 Dr/Saloon - 4 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf2 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/116/Hatchback - 5 Dr/Hatchback - 5 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf3 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/116/SUV - 5 Dr/SUV - 5 Dr_imgs_pred_output.csv\")\n",
     "visionPredDf = pd.concat([visionPredDf1, visionPredDf2,visionPredDf3 ])\n",
     "majorParts = [x.replace(\"vision_\", \"\") for x in  visionPredDf.columns]\n",
     "majorParts"
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
        "30"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
        "      <th>1019</th>\n",
        "      <td>13127647</td>\n",
        "      <td>windscreen_rear</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -311,12 +312,12 @@
        "509   13127647     undercarriage      -1     0   0   0   0    None    None\n",
        "539   13127647             wheel       0     0   0   0   0    None    None\n",
        "809   13127647  windscreen_front       0     0   0   0   0    None    None\n",
-       "1019  13127647   windscreen_rear      -1     0   0   0   0    None    None\n",
+       "1019  13127647   windscreen_rear       0     0   0   0   0    None    None\n",
        "\n",
        "[1020 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
        "34"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "750"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
        "0.20533333333333334"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -449,6 +450,18 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>10053736</td>\n",
+       "      <td>fender_front_lh</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>120</th>\n",
        "      <td>10053736</td>\n",
        "      <td>headlamp_lh</td>\n",
@@ -473,18 +486,6 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>10142635</td>\n",
-       "      <td>door_front_rh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -497,9 +498,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>13045105</td>\n",
+       "      <th>386</th>\n",
+       "      <td>12801046</td>\n",
+       "      <td>misc</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>536</th>\n",
+       "      <td>12801046</td>\n",
        "      <td>wheel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>13045105</td>\n",
+       "      <td>engine</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -509,9 +534,9 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>13127647</td>\n",
-       "      <td>bumper_front</td>\n",
+       "      <th>88</th>\n",
+       "      <td>13045105</td>\n",
+       "      <td>grille</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -532,53 +557,29 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>989</th>\n",
-       "      <td>13127647</td>\n",
-       "      <td>door_rear_lh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>13127647</td>\n",
-       "      <td>headlamp_rh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>103 rows × 9 columns</p>\n",
+       "<p>92 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       CaseID           part  v_pred  pred  gt  fp  fn inspect remarks\n",
-       "0    10053736         bonnet       0     0   1   0   1    None    None\n",
-       "390  10053736         engine       1     1   0   1   0    None    None\n",
-       "120  10053736    headlamp_lh       1     1   0   1   0    None    None\n",
-       "360  10053736           misc       1     1   0   1   0    None    None\n",
-       "211  10142635  door_front_rh       1     1   0   1   0    None    None\n",
-       "..        ...            ...     ...   ...  ..  ..  ..     ...     ...\n",
-       "538  13045105          wheel       1     1   0   1   0    None    None\n",
-       "59   13127647   bumper_front       1     1   0   1   0    None    None\n",
-       "359  13127647    bumper_rear       1     1   0   1   0    None    None\n",
-       "989  13127647   door_rear_lh       1     1   0   1   0    None    None\n",
-       "179  13127647    headlamp_rh       1     1   0   1   0    None    None\n",
+       "       CaseID             part  v_pred  pred  gt  fp  fn inspect remarks\n",
+       "0    10053736           bonnet       0     0   1   0   1    None    None\n",
+       "390  10053736           engine       1     1   0   1   0    None    None\n",
+       "540  10053736  fender_front_lh       1     1   0   1   0    None    None\n",
+       "120  10053736      headlamp_lh       1     1   0   1   0    None    None\n",
+       "360  10053736             misc       1     1   0   1   0    None    None\n",
+       "..        ...              ...     ...   ...  ..  ..  ..     ...     ...\n",
+       "386  12801046             misc       0     0   1   0   1    None    None\n",
+       "536  12801046            wheel       0     0   1   0   1    None    None\n",
+       "418  13045105           engine       1     1   0   1   0    None    None\n",
+       "88   13045105           grille       1     1   0   1   0    None    None\n",
+       "359  13127647      bumper_rear       1     1   0   1   0    None    None\n",
        "\n",
-       "[103 rows x 9 columns]"
+       "[92 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,16 +601,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.10098039215686275"
+       "0.09019607843137255"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -657,8 +658,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>10618351</td>\n",
+       "      <th>400</th>\n",
+       "      <td>10388238</td>\n",
        "      <td>engine</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -669,14 +670,14 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>11019580</td>\n",
-       "      <td>headlamp_rh</td>\n",
+       "      <th>414</th>\n",
+       "      <td>12628126</td>\n",
+       "      <td>engine</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
@@ -685,12 +686,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       CaseID         part  v_pred  pred  gt  fp  fn inspect remarks\n",
-       "402  10618351       engine       1     0   0   0   0    None    None\n",
-       "164  11019580  headlamp_rh       1     0   1   0   1    None    None"
+       "       CaseID    part  v_pred  pred  gt  fp  fn inspect remarks\n",
+       "400  10388238  engine       1     0   0   0   0    None    None\n",
+       "414  12628126  engine       1     0   0   0   0    None    None"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +731,7 @@
        "       'windscreen_rear'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,16 +742,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1519903498190591"
+       "0.08912037037037036"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,16 +763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.28272251308900526"
+       "0.3974358974358974"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,16 +784,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8235294117647058"
+       "0.8637254901960785"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,14 +805,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8235294117647058\n"
+      "0.8637254901960784\n"
      ]
     }
    ],
@@ -829,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
