--- a/src/train/MultilabelPartlistPredition.ipynb
+++ b/src/train/MultilabelPartlistPredition.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "\n",
     "multilabelDf = wr.s3.read_parquet(\n",
-    "    path=f\"s3://multilabel_df/\",\n",
+    "    path=f\"s3://multilabel_df_2/\",\n",
     "    dataset=True,\n",
     ")"
    ]
