Add test set Fixes #52

--- a/src/feature/PartlistLabel.ipynb
+++ b/src/feature/PartlistLabel.ipynb
@@ -6344,69 +6344,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (2256083413.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    removePart = [pre_remove_position\"]\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "blacklistDesc = [\"roof moulding rh\", \n",
-    "\"roof moulding lh\", \n",
-    "\"door hinge\", \n",
-    "\"headlamp bulb\",\n",
-    "\"lambda sensor\",\n",
-    "\"rocker cover\",\n",
-    "\"mirror rear view\",\n",
-    "\"bumper front finisher rh\",\n",
-    "\"grille front moulding lh\"\n",
-    "\"wiring front main\",\n",
-    "\"radar front screen\",\n",
-    "\"exhaust assembly\",\n",
-    "\"chassis assembly\",\n",
-    "\"bodyside assembly rh\",\n",
-    "\"lamp assembly-head left\",\n",
-    "\"exhaust front pipe\",\n",
-    "\"front panel weatherstrip\",\n",
-    "\"tailgate finisher\",\n",
-    "\"tailgate lock\",\n",
-    "\"boot lid lock\",\n",
-    "\"boot lid aperture weatherstrip\",\n",
-    "\"boot extractor vent\",\n",
-    "\"towing cover\",\n",
-    "\"pan assy., oil\",\n",
-    "\"pas container & assembly\",\n",
-    "\"cooling fan resistor\",\n",
-    "\"mudflap front rh\",\n",
-    "\"indicator lamp front rh\",\n",
-    "\"stabiliser bar front link rh\",\n",
-    "\"front pillar outer rh\",\n",
-    "\"brake abs sensor front rh\",\n",
-    "\"wiper front motor\",\n",
-    "\"front pillar inner rh\",\n",
-    "\"chassis member front extension rh\",\n",
-    "\"side step\",\n",
-    "\"stabiliser bar front link lh\",\n",
-    "\"front pillar inner lh\",\n",
-    "\"trailing arm rear rh\",\n",
-    "\"mudflap rear rh\",\n",
-    "\"chassis member rear rh\",\n",
-    "\"wiper rear motor\",\n",
-    "\"door visor\",\n",
-    "\"trailing arm rear lh\",\n",
-    "\"centre pillar outer rh\",\n",
-    "\"runningboard panel outer rh\",\n",
-    "\"centre pillar outer lh\",\n",
-    "\"runningboard panel outer lh\",\n",
-    "\"lh bootlid lamp\",\n",
-    "\"rr silencer heat insulation\",\n",
-    "\"inner towing cover\",\n",
-    "\"lower trim\",\n",
-    "\"lh bootlid lamp\",\n",
-    "\"rh tail lamp\",\n",
-    "\"tail panel outer\",\n",
-    "\"face rr bumper\",\n",
-    "\"exhaust silencer rear\",\n",
-    "\"face assy. rr bumper lower\",\n",
-    "\"garnish rr. bumper lower\",\n",
-    "\"grille front moulding\"\n",
+    "removePart = [\n",
+    "    \"wheel\", \n",
+    "    \"door front lh\",\n",
+    "    \"door front rh\",\n",
+    "    \"door rear lh\",\n",
+    "    \"door rear lh\",\n",
+    "\n",
     "]"
    ]
   },
@@ -6731,7 +6688,6 @@
     }
    ],
    "source": [
-    "partlistLabelDf = partlistLabelDf[~partlistLabelDf[\"Description\"].str.contains(\"|\".join(blacklistDesc))]\n",
     "partlistLabelDf"
    ]
   },
