--- a/src/data_engineering/get_imgs_df.ipynb
+++ b/src/data_engineering/get_imgs_df.ipynb
@@ -1902,25 +1902,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# partToBalance = [\n",
-    "#     \"vision_door_rear_lh\",\n",
-    "#     \"vision_door_rear_rh\", \n",
-    "#     \"vision_rear_quarter_lh\", \n",
-    "#     \"vision_rear_quarter_rh\",\n",
-    "#     \"vision_tail_lamp_lh\",\n",
-    "#     \"vision_tail_lamp_rh\",\n",
-    "#     \"vision_windscreen_front\",\n",
-    "#     \"vision_door_front_lh\",\n",
-    "#     \"vision_door_front_rh\",\n",
+    "partToBalance = [\n",
+    "    \"vision_door_rear_lh\",\n",
+    "    \"vision_door_rear_rh\", \n",
+    "    \"vision_rear_quarter_lh\", \n",
+    "    \"vision_rear_quarter_rh\",\n",
+    "    \"vision_tail_lamp_lh\",\n",
+    "    \"vision_tail_lamp_rh\",\n",
+    "    \"vision_windscreen_front\",\n",
+    "    \"vision_door_front_lh\",\n",
+    "    \"vision_door_front_rh\",\n",
     "\n",
-    "#     ]\n",
-    "# caseIdForBalance = []\n",
-    "# balanceSampleCount = 3000\n",
-    "# for part in partToBalance:\n",
-    "#     targetCaseId = balanceLabelDf[balanceLabelDf[part] == 1].head(balanceSampleCount)[\"CaseID\"].unique().tolist()\n",
-    "#     caseIdForBalance.extend(targetCaseId)\n",
-    "# uniqueCaseIdForBalance = set(caseIdForBalance)\n",
-    "# print(len(uniqueCaseIdForBalance))"
+    "    ]\n",
+    "caseIdForBalance = []\n",
+    "balanceSampleCount = 3000\n",
+    "for part in partToBalance:\n",
+    "    targetCaseId = balanceLabelDf[balanceLabelDf[part] == 1].head(balanceSampleCount)[\"CaseID\"].unique().tolist()\n",
+    "    caseIdForBalance.extend(targetCaseId)\n",
+    "uniqueCaseIdForBalance = set(caseIdForBalance)\n",
+    "print(len(uniqueCaseIdForBalance))"
    ]
   },
   {
@@ -2919,7 +2919,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "work",
    "language": "python",
    "name": "python3"
   },
@@ -2933,12 +2933,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "0e8f33c5a67865e6aadcd232beb3e2644a1f224e780847feacdefa5e710f41d5"
    }
   }
  },
