Added aum auto filter

--- a/src/analysis/case_study/get_partlist_label.ipynb
+++ b/src/analysis/case_study/get_partlist_label.ipynb
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "caseStudyDf = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_15/case_study_gt.csv\")\n",
+    "caseStudyDf = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_16/case_study_gt.csv\")\n",
     "caseStudyCaseId = caseStudyDf[\"CaseID\"].tolist()\n"
    ]
   },
@@ -350,7 +350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_327757/4094135370.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2953855/4094135370.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -389,54 +389,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60789</th>\n",
-       "      <td>10021191</td>\n",
+       "      <th>131648</th>\n",
+       "      <td>10071959</td>\n",
        "      <td>bonnet</td>\n",
        "      <td>bonnet</td>\n",
        "      <td>bonnet</td>\n",
        "      <td>bonnet</td>\n",
-       "      <td>549.1</td>\n",
-       "      <td></td>\n",
+       "      <td>377.14</td>\n",
+       "      <td>buckled</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>317010</th>\n",
-       "      <td>10021191</td>\n",
+       "      <th>424243</th>\n",
+       "      <td>10071959</td>\n",
        "      <td>bumper front cover</td>\n",
        "      <td>bumper front</td>\n",
        "      <td>bumper front</td>\n",
        "      <td>bumper front cover</td>\n",
-       "      <td>392.5</td>\n",
-       "      <td></td>\n",
+       "      <td>297.31</td>\n",
+       "      <td>deformed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1419393</th>\n",
-       "      <td>10021191</td>\n",
+       "      <th>696591</th>\n",
+       "      <td>10071959</td>\n",
+       "      <td>bumper reinforcement front</td>\n",
+       "      <td>bumper front</td>\n",
+       "      <td>bumper front</td>\n",
+       "      <td>bumper reinforcement front</td>\n",
+       "      <td>194.82</td>\n",
+       "      <td>dented</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1473976</th>\n",
+       "      <td>10071959</td>\n",
        "      <td>air conditioning condenser</td>\n",
        "      <td>air conditioning</td>\n",
        "      <td>engine</td>\n",
        "      <td>air conditioning condenser</td>\n",
-       "      <td>537.2</td>\n",
-       "      <td></td>\n",
+       "      <td>477.40</td>\n",
+       "      <td>pierced /bent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>853208</th>\n",
-       "      <td>10021191</td>\n",
-       "      <td>headlamp assy lh</td>\n",
-       "      <td>headlamp lh</td>\n",
-       "      <td>headlamp lh</td>\n",
-       "      <td>headlamp assy lh</td>\n",
-       "      <td>708.3</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2081154</th>\n",
-       "      <td>10056498</td>\n",
-       "      <td>bumper rear cover</td>\n",
-       "      <td>bumper rear</td>\n",
-       "      <td>bumper rear</td>\n",
-       "      <td>bumper rear cover</td>\n",
-       "      <td>308.1</td>\n",
-       "      <td>cut/torn</td>\n",
+       "      <th>1849126</th>\n",
+       "      <td>10071959</td>\n",
+       "      <td>radiator</td>\n",
+       "      <td>radiator</td>\n",
+       "      <td>engine</td>\n",
+       "      <td>radiator</td>\n",
+       "      <td>677.88</td>\n",
+       "      <td>top casing broken</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -449,88 +449,88 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3582286</th>\n",
-       "      <td>13376628</td>\n",
-       "      <td>airbag ecu</td>\n",
-       "      <td>airbag</td>\n",
-       "      <td>non external</td>\n",
-       "      <td>airbag ecu</td>\n",
-       "      <td>390.2</td>\n",
-       "      <td>deployed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3636155</th>\n",
-       "      <td>13376628</td>\n",
-       "      <td>airbag passenger side</td>\n",
-       "      <td>airbag</td>\n",
-       "      <td>non external</td>\n",
-       "      <td>airbag passenger side</td>\n",
-       "      <td>634.9</td>\n",
-       "      <td>deployed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3676535</th>\n",
-       "      <td>13376628</td>\n",
-       "      <td>seat belt reel front lh</td>\n",
-       "      <td>interior</td>\n",
-       "      <td>non external</td>\n",
-       "      <td>seat belt reel front lh</td>\n",
-       "      <td>369.0</td>\n",
-       "      <td>jammed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3708425</th>\n",
-       "      <td>13376628</td>\n",
-       "      <td>seat belt reel front rh</td>\n",
-       "      <td>interior</td>\n",
-       "      <td>non external</td>\n",
-       "      <td>seat belt reel front rh</td>\n",
-       "      <td>369.0</td>\n",
-       "      <td>jammed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4073481</th>\n",
-       "      <td>13376628</td>\n",
-       "      <td>windscreen front</td>\n",
-       "      <td>windscreen front</td>\n",
-       "      <td>windscreen front</td>\n",
-       "      <td>windscreen front</td>\n",
-       "      <td>584.6</td>\n",
+       "      <th>1648762</th>\n",
+       "      <td>13194275</td>\n",
+       "      <td>grille front</td>\n",
+       "      <td>grille</td>\n",
+       "      <td>grille</td>\n",
+       "      <td>front grille assy</td>\n",
+       "      <td>250.00</td>\n",
        "      <td>broken</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4587148</th>\n",
+       "      <td>13194275</td>\n",
+       "      <td>grille badge</td>\n",
+       "      <td>grille</td>\n",
+       "      <td>grille</td>\n",
+       "      <td>grille badge [diamond]</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>recommended earlier</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>864601</th>\n",
+       "      <td>13194275</td>\n",
+       "      <td>headlamp assy lh</td>\n",
+       "      <td>headlamp lh</td>\n",
+       "      <td>headlamp lh</td>\n",
+       "      <td>headlamp assy lh</td>\n",
+       "      <td>800.00</td>\n",
+       "      <td>broken stay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1052901</th>\n",
+       "      <td>13194275</td>\n",
+       "      <td>headlamp assy rh</td>\n",
+       "      <td>headlamp rh</td>\n",
+       "      <td>headlamp rh</td>\n",
+       "      <td>headlamp assy rh</td>\n",
+       "      <td>800.00</td>\n",
+       "      <td>broken stay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2362458</th>\n",
+       "      <td>13194275</td>\n",
+       "      <td>none</td>\n",
+       "      <td>misc</td>\n",
+       "      <td>misc</td>\n",
+       "      <td>water pump</td>\n",
+       "      <td>893.00</td>\n",
+       "      <td>jammed-replaced</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>300 rows × 7 columns</p>\n",
+       "<p>276 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           CaseID                  lvl_1_desc        lvl_2_desc  \\\n",
-       "60789    10021191                      bonnet            bonnet   \n",
-       "317010   10021191          bumper front cover      bumper front   \n",
-       "1419393  10021191  air conditioning condenser  air conditioning   \n",
-       "853208   10021191            headlamp assy lh       headlamp lh   \n",
-       "2081154  10056498           bumper rear cover       bumper rear   \n",
-       "...           ...                         ...               ...   \n",
-       "3582286  13376628                  airbag ecu            airbag   \n",
-       "3636155  13376628       airbag passenger side            airbag   \n",
-       "3676535  13376628     seat belt reel front lh          interior   \n",
-       "3708425  13376628     seat belt reel front rh          interior   \n",
-       "4073481  13376628            windscreen front  windscreen front   \n",
+       "           CaseID                  lvl_1_desc        lvl_2_desc    lvl_3_desc  \\\n",
+       "131648   10071959                      bonnet            bonnet        bonnet   \n",
+       "424243   10071959          bumper front cover      bumper front  bumper front   \n",
+       "696591   10071959  bumper reinforcement front      bumper front  bumper front   \n",
+       "1473976  10071959  air conditioning condenser  air conditioning        engine   \n",
+       "1849126  10071959                    radiator          radiator        engine   \n",
+       "...           ...                         ...               ...           ...   \n",
+       "1648762  13194275                grille front            grille        grille   \n",
+       "4587148  13194275                grille badge            grille        grille   \n",
+       "864601   13194275            headlamp assy lh       headlamp lh   headlamp lh   \n",
+       "1052901  13194275            headlamp assy rh       headlamp rh   headlamp rh   \n",
+       "2362458  13194275                        none              misc          misc   \n",
        "\n",
-       "               lvl_3_desc                 Description   fVAL DamageCond  \n",
-       "60789              bonnet                      bonnet  549.1             \n",
-       "317010       bumper front          bumper front cover  392.5             \n",
-       "1419393            engine  air conditioning condenser  537.2             \n",
-       "853208        headlamp lh            headlamp assy lh  708.3             \n",
-       "2081154       bumper rear           bumper rear cover  308.1   cut/torn  \n",
-       "...                   ...                         ...    ...        ...  \n",
-       "3582286      non external                  airbag ecu  390.2   deployed  \n",
-       "3636155      non external       airbag passenger side  634.9   deployed  \n",
-       "3676535      non external     seat belt reel front lh  369.0     jammed  \n",
-       "3708425      non external     seat belt reel front rh  369.0     jammed  \n",
-       "4073481  windscreen front            windscreen front  584.6     broken  \n",
+       "                        Description    fVAL           DamageCond  \n",
+       "131648                       bonnet  377.14              buckled  \n",
+       "424243           bumper front cover  297.31             deformed  \n",
+       "696591   bumper reinforcement front  194.82               dented  \n",
+       "1473976  air conditioning condenser  477.40        pierced /bent  \n",
+       "1849126                    radiator  677.88    top casing broken  \n",
+       "...                             ...     ...                  ...  \n",
+       "1648762           front grille assy  250.00               broken  \n",
+       "4587148      grille badge [diamond]  145.00  recommended earlier  \n",
+       "864601             headlamp assy lh  800.00          broken stay  \n",
+       "1052901            headlamp assy rh  800.00          broken stay  \n",
+       "2362458                  water pump  893.00      jammed-replaced  \n",
        "\n",
-       "[300 rows x 7 columns]"
+       "[276 rows x 7 columns]"
       ]
      },
      "execution_count": 5,
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputDir = \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_15/partlist\"\n",
+    "outputDir = \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_16/partlist\"\n",
     "os.makedirs(outputDir, exist_ok=True)"
    ]
   },
@@ -659,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
